change website names and buttons

--- a/flaskstarter/templates/layouts/base.html
+++ b/flaskstarter/templates/layouts/base.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Flask-Starter-App - Python Flask Starter Template">
+  <meta name="description" content="Covidscope - Covid-19 atlas web portal">
   <meta name="author" content="github.com/">
 
-  <title>{% block title %}{{ page_title|default('Flask-Starter') }}{% endblock %} - Flask-Starter-App</title>
+  <title>{% block title %}{{ page_title|default('Flask-Starter') }}{% endblock %} - Covidscope</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{{ url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
