--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -199,7 +199,7 @@ tr.spaceTop>td {
 
 /*button*/
 
-.searchButton {
+.darkButton {
     background: #045547;
     box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
     border-radius: 8px;
@@ -207,8 +207,32 @@ tr.spaceTop>td {
     border: 0px;
     color: #ffffff;
     -webkit-appearance: none;
-    font-size: 16px;
+    font-size: 15px;
 }
+
+.mediumButton {
+    background: #1CA68C;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 44px;
+    border: 0px;
+    color: #FFFFFF;
+    -webkit-appearance: none;
+    font-size: 15px;
+}
+
+.lightButton {
+    background: #E2EEE8;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 44px;
+    border: 0px;
+    color: #045547;
+    -webkit-appearance: none;
+    font-size: 15px;
+}
+
+
 
 /*my_tasks*/
 
