--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -14,9 +14,9 @@
         <div class="row" id="globalsearch">
             <input style="width: 50%; height: 48px; display:inline-block" class="form-control" id="customSearchBox"
                 placeholder="Global Search" />
-            <input type="button" style="display:inline-block;margin-left: 16px;" class="searchButton" value="Search all"
+            <input type="button" style="display:inline-block;margin-left: 16px;" class="darkButton" value="Search all"
                 id="btnGSearch" />
-            <input type="button" style="display:inline-block;margin-left: 16px;" class="searchButton" value="Clear"
+            <input type="button" style="display:inline-block;margin-left: 16px;" class="lightButton" value="Clear"
                 id="btnGClear" />
         </div>
         <div class="row justify-content-between" style="margin-top: 24px; max-width: 1200px;">
@@ -79,16 +79,49 @@
         </div>
 
         <div class="row justify-content-start" style="margin-top: 24px;">
-            <div><input type="button" class="searchButton " style="display:inline-block;" value="Search"
-                    id="btnSearch" /></div>
-            <div><input type="button" class="searchButton" style="display:inline-block; margin-left: 16px;"
-                    value="Clear" id="btnClear" /></div>
+            <div><input type="button" class="darkButton" style="display:inline-block;" value="Search" id="btnSearch" />
+            </div>
+            <div><input type="button" class="lightButton" style="display:inline-block; margin-left: 16px;" value="Clear"
+                    id="btnClear" /></div>
         </div>
 
         <div class="row justify-content-end" style="margin-top: 24px;">
-            <div><button id="scfbutton" class="searchButton" name="show_scfeature"> Show scFeature plot
+            <div><button id="scfbutton" class="lightButton" name="show_scfeature"
+                    style="display:inline-block ; margin-right: 16px;"> Show scFeature plot
                 </button></div>
+            <div>
+                <button class="lightButton" name="show_plot" type="submit" style="display:inline-block;"
+                    onclick="window.location.href='{{ url_for( 'tasks.show_plot') }}';"> Show UMAP Plot </button>
+            </div>
         </div>
+
+        <div class="row justify-content-end" style="margin-top: 24px; margin-bottom: 40px">
+            <div>
+                <button class="mediumButton" name="refresh_table" type="submit"
+                    style="display:inline-block ; margin-right: 16px;"
+                    onclick="window.location.href='{{ url_for( 'frontend.index') }}';"> Return to Home </button>
+            </div>
+            <div>
+                <button class="mediumButton" name="refresh_table" type="submit"
+                    style="display:inline-block; margin-right: 16px;"
+                    onclick="window.location.href='{{ url_for( 'tasks.table_view', main='')}}';"> Refresh table
+                </button>
+            </div>
+            <div>
+                <form class="download" action="{{ url_for('tasks.download_meta')}}" method="post">
+                    <button class="mediumButton" name="download_meta" type="submit"
+                        style="display:inline-block; margin-right: 16px;"> Download Metadata </button>
+                </form>
+            </div>
+            <div>
+                <form class="download" action="{{ url_for('tasks.download_matrix')}}" method="post">
+                    <button class="mediumButton" name="download_matrix" type="submit" style="display:inline-block;">
+                        Download Matrix </button>
+                </form>
+            </div>
+        </div>
+
+
 
         <div class="row" style="margin-top: 24px;" hidden>
             <table style="width:100%">
@@ -108,10 +141,10 @@
                         <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post"
                             style="display:inline-block"></form>
                     </tr>
-                        <td>
-                            <button class="btn btn-primary" style="display:inline-block" id="btnAdvance">Advanced
-                                Search</button>
-                        </td>
+                    <td>
+                        <button class="btn btn-primary" style="display:inline-block" id="btnAdvance">Advanced
+                            Search</button>
+                    </td>
                     </tr>
                 </tbody>
             </table>
@@ -137,24 +170,6 @@
             <h4>Please choose any of the option below for data manipulation.</h4>
 
             <!-- Edited by Junyi 0628 -->
-            <button class="btn btn-primary" name="refresh_table" type="submit" style="display:inline-block"
-                onclick="window.location.href='{{ url_for( 'frontend.index') }}';"> Return to Home </button>
-
-            <button class="btn btn-primary" name="refresh_table" type="submit" style="display:inline-block"
-                onclick="window.location.href='{{ url_for( 'tasks.table_view', main='')}}';"> Refresh table </button>
-
-            <button class="btn btn-primary" name="show_plot" type="submit" style="display:inline-block"
-                onclick="window.location.href='{{ url_for( 'tasks.show_plot') }}';"> Show UMAP Plot </button>
-                
-            <form class="download" action="{{ url_for('tasks.download_meta')}}" method="post"
-                style="display:inline-block">
-                <button class="btn btn-primary" name="download_meta" type="submit"> Download Metadata </button>
-            </form>
-
-            <form class="download" action="{{ url_for('tasks.download_matrix')}}" method="post"
-                style="display:inline-block">
-                <button class="btn btn-primary" name="download_matrix" type="submit"> Download Matrix </button>
-            </form>
 
             <div id="message" style="display: none">
                 <div id="message-screen-mask" class="ui-widget-overlay ui-front"></div>
