--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -6,6 +6,11 @@
 
 {% block body %}
 <script src="https://use.fontawesome.com/bbc48b41d3.js"></script>
+
+<div id="message" class="section01 row justify-content-center" style="margin:0px; padding:10px; display:none;">
+    <div id="message-text">Please wait...</div>
+</div>
+
 <div class="section03" style="padding-left: 120px; padding-right: 120px;">
     <div class="container" style="padding: 0px;">
         <div class="row justify-content-start">
@@ -97,7 +102,7 @@
             </div>
         </div>
 
-        <div class="row justify-content-end" style="margin-top: 24px; margin-bottom: 40px">
+        <div class="row justify-content-end" style="margin-top: 24px; margin-bottom: 100px">
             <div>
                 <button class="mediumButton" name="refresh_table" type="submit"
                     style="display:inline-block ; margin-right: 16px;"
