--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -19,6 +19,10 @@ tr.spaceTop>td {
     padding-top: 24px;
 }
 
+input::-webkit-calendar-picker-indicator {
+    display: none !important;
+}
+
 /*font*/
 
 .boldauto64 {
@@ -90,6 +94,45 @@ tr.spaceTop>td {
     line-height: 19px;
     text-align: center;
     color: #607673;
+}
+
+/*button*/
+
+.darkButton {
+    background: #045547;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 40px;
+    border: 0px;
+    color: #ffffff;
+    -webkit-appearance: none;
+    font-size: 15px;
+}
+
+.mediumButton {
+    background: #1CA68C;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 40px;
+    border: 0px;
+    color: #FFFFFF;
+    -webkit-appearance: none;
+    font-size: 15px;
+}
+
+.lightButton {
+    background: #E2EEE8;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 40px;
+    border: 0px;
+    color: #045547;
+    -webkit-appearance: none;
+    font-size: 15px;
+}
+
+.multiselect-container {
+    width: 300px;
 }
 
 /*nav*/
@@ -197,40 +240,7 @@ tr.spaceTop>td {
     justify-items: start;
 }
 
-/*button*/
 
-.darkButton {
-    background: #045547;
-    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
-    border-radius: 8px;
-    padding: 10px 44px;
-    border: 0px;
-    color: #ffffff;
-    -webkit-appearance: none;
-    font-size: 15px;
-}
-
-.mediumButton {
-    background: #1CA68C;
-    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
-    border-radius: 8px;
-    padding: 10px 44px;
-    border: 0px;
-    color: #FFFFFF;
-    -webkit-appearance: none;
-    font-size: 15px;
-}
-
-.lightButton {
-    background: #E2EEE8;
-    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
-    border-radius: 8px;
-    padding: 10px 44px;
-    border: 0px;
-    color: #045547;
-    -webkit-appearance: none;
-    font-size: 15px;
-}
 
 
 
