--- a/flaskstarter/templates/tasks/show_plot.html
+++ b/flaskstarter/templates/tasks/show_plot.html
@@ -14,49 +14,54 @@
     <div class="row justify-content-center">
       <div class="boldauto36">UMAP Plot</div>
     </div>
-    <td>Gene Option</td>
-    <td>
-      <form action="{{ url_for('tasks.show_plot')}}" method="post" style="display:inline-block">
-        <input list="opt_gene" name="name_opt_gene">
-        <datalist id="opt_gene">
+    <div class="row justify-content-center" style="padding: 30px 0px">
+      <form action="{{ url_for('tasks.show_plot')}}" method="post">
+        <select id="opt_gene" name="name_opt_gene" class="multiselect dropdown-toggle custom-select"
+          multiple="multiple">
+          <option label=" "></option>
           {% for val in genes %}
           <option value="{{val}}">{{val}}</option>
           {% endfor %}
-        </datalist>
-        <button id="idbtnSelectgene" name="btnSelectgene" type="submit" onclick="loading();" class="searchButton">
-          Search </button>
+        </select>
+        <button id="idbtnSelectgene" name="btnSelectgene" type="submit" onclick="loading();" class="darkButton"
+          style="margin-left:16px; ">
+          Generate </button>
       </form>
-    </td>
 
-    <td>Color Option</td>
-    <td>
-      <form action="{{ url_for('tasks.show_plot')}}" method="post" style="display:inline-block">
-        <select id="opt_col" name="name_opt_col">
+      <form action="{{ url_for('tasks.show_plot')}}" method="post" style="margin-left:16px;">
+        <select id="opt_col" name="name_opt_col" class="multiselect dropdown-toggle custom-select" multiple="multiple">
           <option label=" "></option>
           {% for val in colors %}
           <option value="{{val}}">{{val}}</option>
           {% endfor %}
         </select>
-        <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit"> Select </button>
+        <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit" class="darkButton" style="margin-left:16px;">
+          Select </button>
       </form>
-    </td>
-    <div id="chart" class="chart"></div>
-    <div id="chart2" class="chart"></div>
+
+    </div>
+
+    <div class="row justify-content-end" style="padding-top: 30px">
+      <form action="{{ url_for('tasks.table_view')}}" method="get" style="display:inline-block;">
+        <button class="mediumButton" name="jump_home" type="submit"> Go to homepage</button>
+      </form>
+      <form action="{{ url_for('tasks.download_matrix')}}" method="post"
+        style="display:inline-block; padding-left: 30px">
+        <button class="mediumButton" name="download_matrix" type="submit"> Download matrix </button>
+      </form>
+    </div>
+
+    <div class="row justify-content-center" style="padding-top: 30px">
+      <div id="chart" class="chart"></div>
+    </div>
+    <div class="row justify-content-center" style="padding-top: 30px">
+      <div id="chart2" class="chart"></div>
+    </div>
+
+
 
   </div>
 </div>
-
-
-<div class="jumbotron">
-  <h4>Please choose any of the option below for data manipulation.</h4>
-  <form action="{{ url_for('tasks.table_view')}}" method="get" style="display:inline-block">
-    <button class="btn btn-primary" name="jump_home" type="submit"> Go to homepage</button>
-  </form>
-  <form action="{{ url_for('tasks.download_matrix')}}" method="post" style="display:inline-block">
-    <button class="btn btn-primary" name="download_matrix" type="submit"> Download matrix </button>
-  </form>
-</div>
-
 
 {% endblock %}
 
@@ -97,4 +102,36 @@
   }
 // ]]></script>
 
+<script>
+  $('#opt_col').multiselect({
+    includeSelectAllOption: false,
+    enableFiltering: true,
+    enableCaseInsensitiveFiltering: true,
+    filterPlaceholder: 'Search for something...',
+    nonSelectedText: 'Color option',
+    buttonWidth: '300px',
+    maxHeight: 450
+  });
+
+  $('#opt_gene').multiselect({
+    includeSelectAllOption: false,
+    enableFiltering: true,
+    enableCaseInsensitiveFiltering: true,
+    filterPlaceholder: 'Search for something...',
+    nonSelectedText: 'Gene option',
+    buttonWidth: '300px',
+    maxHeight: 450
+  });
+
+  //var last_valid_selection = $('#opt_gene').value;
+  //$('.multiselect').change(function (event) {
+  //  if ($(this).val().length > 1) {
+  //    $(this).val(last_valid_selection);
+  //  }
+  //  else {
+  //    last_valid_selection = $(this).val();
+  //  }
+  //});
+
+</script>
 {% endblock %}
