--- a/flaskstarter/templates/tasks/show_scfeature.html
+++ b/flaskstarter/templates/tasks/show_scfeature.html
@@ -5,89 +5,89 @@
 {% extends 'layouts/base.html' %}
 
 {% block body %}
-{% include 'layouts/banner.html' %}
 
+<div id="loading" ,style="display:none;"></div>
+<div id="loadingbox" ,style="display:none;">Loading</div>
 
-<div id="loading",style="display:none;"></div>
-<div id="loadingbox",style="display:none;">Loading</div>
+<div class="section03">
+  <div class="container" style="margin:0px; padding: 0px;">
+    <div class="row justify-content-center">
+      <div class="boldauto36">scFeature Plots</div>
+    </div>
+    <!-- <td>Cell type</td>
+    <td>
+      <form action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
+        <input list="opt_gene" name="name_opt_gene">
+          <datalist id="opt_gene">
+            {% for val in genes %}
+            <option value="{{val}}">{{val}}</option>
+            {% endfor %}
+        </datalist>
+        <button id="idbtnSelectgene" name="btnSelectgene" type="submit" > Search </button>
+      </form>  
+    </td> -->
 
-<div class="container">
-  <div class="row justify-content-center">
-    <h2>scFeature Plots</h2>
-  </div>
-  <!-- <td>Cell type</td>
-  <td>
-    <form action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
-      <input list="opt_gene" name="name_opt_gene">
-        <datalist id="opt_gene">
-          {% for val in genes %}
-          <option value="{{val}}">{{val}}</option>
-          {% endfor %}
-      </datalist>
-      <button id="idbtnSelectgene" name="btnSelectgene" type="submit" > Search </button>
-    </form>  
-  </td> -->
-
-  <!-- <td>Dataset</td> -->
-  <td>
-    <form action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
-      <!-- <select id="opt_dataset" name="name_opt_dataset">
+    <!-- <td>Dataset</td> -->
+    <div class="row justify-content-center" style="padding: 30px 0px">
+      <form action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
+        <!-- <select id="opt_dataset" name="name_opt_dataset">
+            <option label=" "></option>
+            {% for val in datasets %}
+            <option value="{{val}}">{{val}}</option>
+            {% endfor %}
+        </select> -->
+        <select id="opt_celltype" name="name_opt_celltype" placeholder="Cell types">
           <option label=" "></option>
-          {% for val in datasets %}
+          {% for val in celltypes %}
           <option value="{{val}}">{{val}}</option>
           {% endfor %}
-      </select> -->
+        </select>
+        <select id="opt_feature" name="name_opt_feature" placeholder="Pathways">
+          <option label=" "></option>
+          {% for val in features %}
+          <option value="{{val}}">{{val}}</option>
+          {% endfor %}
+        </select>
+        <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit"> Select </button>
+      </form>
+    </div>
 
-      <td>Cell types</td>
-      <select id="opt_celltype" name="name_opt_celltype">
-        <option label=" "></option>
-        {% for val in celltypes %}
-        <option value="{{val}}">{{val}}</option>
-        {% endfor %}
-      </select>
-      <td>Pathways</td>
-      <select id="opt_feature" name="name_opt_feature">
-        <option label=" "></option>
-        {% for val in features %}
-        <option value="{{val}}">{{val}}</option>
-        {% endfor %}
-      </select>
-      <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit"> Select </button>
-    </form>  
-  </td>
 
-   <div id="chart" class="chart"></div>
-   <div id="chart4" class="chart"></div>
-   <div id="chart2" class="chart"></div>
-   <div id="chart3" class="chart"></div>
+    <div id="chart" class="chart"></div>
+    <div id="chart4" class="chart"></div>
+    <div id="chart2" class="chart"></div>
+    <div id="chart3" class="chart"></div>
 
+
+  </div>
+
+
+  <div class="jumbotron">
+    <h4>Please choose any of the option below for data manipulation.</h4>
+    <form action="{{ url_for('tasks.table_view')}}" method="get" style="display:inline-block">
+      <button class="btn btn-primary" name="jump_home" type="submit"> Go to homepage</button>
+    </form>
+    <form action="{{ url_for('tasks.download_scfeature')}}" method="post" style="display:inline-block">
+      <button class="btn btn-primary" name="download_scfeature" type="submit"> Download scFeatures </button>
+    </form>
+  </div>
 
 </div>
 
-
-<div class="jumbotron">
-  <h4>Please choose any of the option below for data manipulation.</h4>
-  <form action="{{ url_for('tasks.table_view')}}" method="get" style="display:inline-block">
-    <button class="btn btn-primary" name="jump_home" type="submit"> Go to homepage</button>
-  </form>
-  <form action="{{ url_for('tasks.download_scfeature')}}" method="post" style="display:inline-block">
-    <button class="btn btn-primary" name="download_scfeature" type="submit"> Download scFeatures </button>
-  </form>
-</div>
 
 {% endblock %}
 
 {% block scripts %}
 
 <script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-              var scrollpos = localStorage.getItem('scrollpos');
-              if (scrollpos) window.scrollTo(0, scrollpos);
-          });
-  
-          window.onbeforeunload = function(e) {
-              localStorage.setItem('scrollpos', window.scrollY);
-          };
+  document.addEventListener("DOMContentLoaded", function (event) {
+    var scrollpos = localStorage.getItem('scrollpos');
+    if (scrollpos) window.scrollTo(0, scrollpos);
+  });
+
+  window.onbeforeunload = function (e) {
+    localStorage.setItem('scrollpos', window.scrollY);
+  };
 </script>
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -124,9 +124,9 @@
 
 <!-- Show loading box -->
 <script type="text/javascript">// <![CDATA[
-  function loading(){
-      $("#loading").show();
-      $("#loadingbox").show();       
+  function loading() {
+    $("#loading").show();
+    $("#loadingbox").show();
   }
 // ]]></script>
 
@@ -140,7 +140,7 @@
     } else {
       x.style.display = "none";
     }
-}// ]]></script>
+  }// ]]></script>
 
 
 {% endblock %}
