--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -128,8 +128,6 @@
             </div>
         </div>
 
-
-
         <div class="row" style="margin-top: 24px;" hidden>
             <table style="width:100%">
                 <tbody>
@@ -177,18 +175,23 @@
 
             <!-- Edited by Junyi 0628 -->
 
+            <div id="message" style="display: none">
+                <div id="message-screen-mask" class="ui-widget-overlay ui-front"></div>
+                <div id="message-text"
+                    class="ui-dialog ui-widget ui-widget-content ui-corner-all ui-front ui-draggable ui-resizable waitmessage">
+                    Please wait...</div>
+            </div>
             <p class="thanks" style="display: none ;">
                 <strong style="background-color: yellow ;">
                     Thank you for your download!
                 </strong>
             </p>
-
-
-
         </div>
 
     </div>
 </div>
+
+
 {% endblock %}
 
 {% block scripts %}
@@ -263,10 +266,6 @@
                 }
             }
         );
-
-
-
-
 
 
         //$("#globalsearch").hide();
@@ -468,8 +467,6 @@
         diff = (endTime - startTime);
         console.log(diff);
     });
-
-
 
 </script>
 
