--- a/flaskstarter/templates/layouts/base.html
+++ b/flaskstarter/templates/layouts/base.html
@@ -23,6 +23,9 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/1.1.1/css/bootstrap-multiselect.css">
 
+  <!-- css -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css"
+    rel="stylesheet" type="text/css">
 
 </head>
 
@@ -57,6 +60,8 @@
     src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/1.1.1/js/bootstrap-multiselect.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js"></script>
 
   <script type="text/javascript" charset="utf8"
     src="https://cdn.datatables.net/plug-ins/1.12.1/pagination/input.js"></script>
