--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div class="row justify-content-end" style="margin-top: 24px; margin-bottom: 100px">
+        <div class="row justify-content-end" style="margin-top: 24px; margin-bottom: 30px">
             <div>
                 <button class="mediumButton" name="refresh_table" type="submit"
                     style="display:inline-block ; margin-right: 16px;"
@@ -128,7 +128,10 @@
             </div>
         </div>
 
-        <div class="row" style="margin-top: 24px;" hidden>
+        <div class="row" style="border: 0.5px solid #B4B6B8; width: 100vw; margin: 0px 0px 70px -150px;"></div>
+
+
+        <div class="row" style="margin-top: 70px;" hidden>
             <table style="width:100%">
                 <tbody>
                     <tr>
@@ -470,5 +473,4 @@
 
 </script>
 
-{% include 'layouts/citation.html' %}
 {% endblock %}
