--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -11,8 +11,9 @@
 }
 
 button:hover,
-button:focus {
-    outline: none;
+button:focus,
+button:active {
+    outline: none !important;
 }
 
 tr.spaceTop>td {
@@ -21,6 +22,10 @@ tr.spaceTop>td {
 
 input::-webkit-calendar-picker-indicator {
     display: none !important;
+}
+
+a {
+    text-decoration: none !important;
 }
 
 /*font*/
@@ -57,6 +62,14 @@ input::-webkit-calendar-picker-indicator {
     text-indent: 0.166506px;
     color: #FFFFFF;
     vertical-align: middle;
+}
+
+.mediumauto18 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
 }
 
 .regularH160 {
