--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -3,7 +3,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block body %}
-<div class="section03">
+<div class="section03" style="min-height: 100vh;">
   <div class="container" style="padding: 0px;">
     <div class="row justify-content-center">
       <div class="boldauto36" style="margin-bottom: 50px;">Tutorial</div>
@@ -17,11 +17,12 @@
             If you want to ....
           </div>
           <div class="row tutorialLink">
-            <a href="http://www.d24h.tutorial.hk">http://www.d24h.tutorial.hk</a>
+            <a
+              href="https://sydneybiox.github.io/scdneyAdvancedPhenotyping/articles/advanced_phenotyping.html">https://sydneybiox.github.io/scdneyAdvancedPhenotyping/articles/advanced_phenotyping.html</a>
           </div>
         </div>
       </div>
-      <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
+      <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;" hidden>
         <div class="row tutorialTitle boldH160">How to...</div>
         <div class="row container collapsible-text"
           style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
@@ -33,7 +34,7 @@
           </div>
         </div>
       </div>
-      <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
+      <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;" hidden>
         <div class="row tutorialTitle boldH160">How to...</div>
         <div class="row container collapsible-text"
           style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
