--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="section03" style="padding-left: 120px; padding-right: 120px;">
-    <div class="container" style="padding: 0px;">
+    <div id="searchPage" class="container" style="padding: 0px;">
         <div class="row justify-content-start">
             <div class="boldauto36" style="padding-bottom: 30px;">Explore scRNA-seq Data</div>
         </div>
@@ -121,17 +121,47 @@
                 </form>
             </div>
             <div>
-                <form class="download" action="{{ url_for('tasks.download_matrix')}}" method="post">
-                    <label for="name">Enter your address to receive file: </label>
-                    <input type="text" name="address" id="address" required>
-                    <button class="mediumButton" name="download_matrix" type="submit" style="display:inline-block;">
-                        Download Matrix </button>
-                </form>
+                <div class="mediumButton" style="display:inline-block;"><a href="#DownloadMatrixForm">Download
+                        Matrix</a>
+                </div>
             </div>
         </div>
 
-        <div class="row" style="border: 0.5px solid #B4B6B8; width: 100vw; margin: 0px 0px 70px -150px;"></div>
+        <div class="overlay" id="DownloadMatrixForm">
+            <div class="wrapper container justify-content-center">
+                <div style="margin-right: auto;">
+                    <a href="#searchPage" class="close">&times;</a>
+                </div>
+                <div class="row justify-content-center">
+                    <div class=" boldauto36">
+                        Dowload Form
+                    </div>
+                </div>
+                <div class="filterContent row justify-content-center">
+                    <div class="filterContainer justify-content-center">
+                        <div class="row justify-content-center">
+                            <form id="downloadMatrix" class="download" action="{{ url_for('tasks.download_matrix')}}"
+                                method="post"></form>
+                            <label form="downloadMatrix" class="mediumauto16" for="name">Email
+                                address for receiving
+                                file: </label>
+                        </div>
+                        <div class="row justify-content-center" style="margin-bottom: 40px">
+                            <input form="downloadMatrix" class="form-control" type="text" name="address" id="address"
+                                placeholder="Email address" required>
+                        </div>
+                        <div class="row justify-content-center">
+                            <button class="mediumButton" name="download_matrix" type="submit"
+                                style="display:inline-block;" form="downloadMatrix">
+                                Download Matrix </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+
+        <div class="row" style="border: 0.5px solid #B4B6B8; width: 100vw; margin: 0px 0px 70px -150px;"></div>
 
         <div class="row" style="margin-top: 70px;" hidden>
             <table style="width:100%">
